--- a/src/App.css
+++ b/src/App.css
@@ -66,7 +66,7 @@ select:hover {
   height: 86vh; 
   overflow-x:scroll;
   scroll-behavior: smooth;
-  scroll-snap-type: y mandatory;
+  scroll-snap-type: x mandatory;
   
   
 }
@@ -101,7 +101,7 @@ select:hover {
         left: 10%;
         position: relative;
         
-        top: 36%;
+        top: 40%;
         overflow: hidden;
         
         }
